force-app/main/default/objects/Contact_Associate_Site__c/Contact_Associate_Site__c.object-meta.xml
<CustomObject>
    <label>CB Contact Site</label>
    <nameField>
        <displayFormat>Site-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CB Contact Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>