force-app/main/default/objects/Contact_Associate_Site__c/fields/CB_Site__c.field-meta.xml
<CustomField>
    <fullName>CB_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CB Site</label>
    <referenceTo>CB_Sites__c</referenceTo>
    <relationshipLabel>CB Contact Sites</relationshipLabel>
    <relationshipName>Contact_Associate_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>