force-app/main/default/objects/Contact_Associate_Site__c/fields/SiteName__c.field-meta.xml
<CustomField>
    <fullName>SiteName__c</fullName>
    <label>Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>